# CppUtils_CustomAccessed

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  CppUtils_CustomAccessConfig.cmake  CppUtils_CustomAccessedConfig.cmake  README.md
Include/: CMakeLists.txt
Include/Include/: CppUtils_CustomAccess_Export.h  CppUtils_CustomAccessed.h  CppUtils_CustomAccessed_Export.h  cpputils_customaccess_include_export.h  cpputils_customaccessed_include_export.h
Include/Include/CppUtils_CustomAccess/: AccessorPolicies.h  AccessorPolicyAndAccessorPolicyStaticInterfaceTraits_PrimaryTemplates.h  AccessorPolicyCategories.h  AccessorPolicyInterfaces.h  AccessorPolicyStaticInterfaces.h  AccessorPolicyUtils.h  AccessorPolicy_NullGetter.h  AccessorPolicy_NullSetter.h  CustomAccessed.h  FindAccessorPolicy.h  FunctionTraits.h  NullGetterAccessorPolicy.h  NullSetterAccessorPolicy.h  PolicyAndPolicyCategoryTraits_PrimaryTemplates.h  UnifiedAccessorPolicy.h
Include/Include/CppUtils_CustomAccessed/: CommonAccessorPolicies.h  CustomAccessed.h  CustomAccessedBase.h  FindAccessorPolicy.h  PlaceholderFile.txt
Module/: CMakeLists.txt
Object/: CMakeLists.txt
Shared/: CMakeLists.txt
Source/: CMakeLists.txt
Source/Source/: CppUtils_CustomAccess_Export.cpp  CppUtils_CustomAccessed.cpp  CppUtils_CustomAccessed_Export.cpp
Source/Source/CppUtils_CustomAccess/: AccessorPolicies.cpp  AccessorPolicyInterfaces.cpp  CustomAccessed.cpp  CustomAccessedBase.cpp  FindAccessorPolicy.cpp  NullGetterAccessorPolicy.cpp  NullSetterAccessorPolicy.cpp  PolicyAndPolicyCategoryTraits_PrimaryTemplates.cpp  UnifiedAccessPolicy.cpp  UnifiedAccessorPolicy.cpp
Source/Source/CppUtils_CustomAccessed/: FindAccessorPolicy.cpp
Static/: CMakeLists.txt
Tests/: CMakeLists.txt
Tests/Source/: MyTest.cpp
